--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+version_curios=1.19-5.1.0.+
+mc_version=1.19
+jei_version=11.0.0.206
