--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+version_curios=1.18.2-5.0.7.+
